tests/sumo/errors/person/unconnected_stops_same_edge/errors.sumo.agg
Warning: 2 total messages of type: Disconnected plan for % '%' (stop range %-% does not cover previous arrival position %).
